<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.ui.fragment.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/accountTitleAccountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_title"
            android:textColor="@color/ebonyClay"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/accountDescriptionAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Here is your account details"
            android:textColor="@color/oxfordBlue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/firstnameAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <TextView
                    android:id="@+id/lastnameAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <TextView
                    android:id="@+id/emailAccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_text"
                    android:textAlignment="viewStart"
                    android:textAppearance="?attr/textAppearanceBody2" />

            </LinearLayout>

            <Button
                android:id="@+id/logOutAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deleteAccountAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/delete_account"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>