<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.activity.BookingSuccessfulActivity">

    <ImageView
        android:id="@+id/successfulBookingSuccessfulImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#8BC34A"
        android:contentDescription="@string/booking_placed_successfully_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426"
        app:srcCompat="@drawable/ic_baseline_done_24" />

    <TextView
        android:id="@+id/successfulDescriptionBookingSuccessfulTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/booking_placed_successfully"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/successfulBookingSuccessfulImageView" />

    <TextView
        android:id="@+id/successfulDescriptionBookingSuccessfulTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/bookings_can_be_seen_in_bookings_tab"
        app:layout_constraintBottom_toTopOf="@id/seeBookingsBookingSuccessfulButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/successfulDescriptionBookingSuccessfulTextView1" />

    <Button
        android:id="@+id/seeBookingsBookingSuccessfulButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/see_bookings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/successfulDescriptionBookingSuccessfulTextView2" />
</androidx.constraintlayout.widget.ConstraintLayout>