<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.ui.activity.MakePaymentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/confirmBookingTitleMakePaymentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm Booking"
                android:textColor="@color/ebonyClay"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confimBookingDescriptionMakePaymentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="Please confirm your booking details"
                android:textColor="@color/oxfordBlue" />

            <LinearLayout
                android:id="@+id/carNameCarIdCarImageMakePaymentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/carNameCarAddressMakePaymentLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/carNameMakePaymentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="5dp"
                        android:text="Name"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/carIdMakePaymentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="5dp"
                        android:text="car id"
                        android:textAppearance="?attr/textAppearanceSubtitle1" />
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/carImageMakePaymentImageView"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/carNameRentalRateCarDetailLinearLayout"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/bookingDetailTitleMakePaymentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="Booking Details"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/carAddressTitleMakePaymentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textStyle="bold"
                        android:text="Address" />

                    <TextView
                        android:id="@+id/carAddressMakePaymentTextView"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        tools:text="address"
                        android:textColor="@color/nevada"
                        android:gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/bookingDateTitleMakePaymentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textStyle="bold"
                        android:text="Booking Date" />

                    <TextView
                        android:id="@+id/bookingDateMakePaymentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="testing"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/nevada" />

                    <TextView
                        android:id="@+id/bookingDayAmountMakePaymentTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="testing"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/nevada" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/totalPriceMakePaymentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalPriceTitleMakePaymentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingVertical="5dp"
                    android:text="Total Price"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/totalPriceMakePaymentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:text="RM"
                    android:textAppearance="?attr/textAppearanceSubtitle1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="-31dp">

                <TextView
                    android:id="@+id/paymentMethodTitleMakePaymentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Payment Method"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cimbBankMakePaymentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/cimb_bank" />

                <Button
                    android:id="@+id/publicBankMakePaymentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/public_bank" />

                <Button
                    android:id="@+id/maybankMakePaymentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maybank" />

                <Button
                    android:id="@+id/affinBankMakePaymentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/affin_bank" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>